# FwUpdateLibs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
crc/: CMakeLists.txt  crc32.c
crc/include/crc/: crc32.h
ed25519/: CMakeLists.txt
ed25519/extra/: ed25519_extra.c  ed25519_extra.h
fragmentstore/: CMakeLists.txt  command.c  fragmentstore.c
fragmentstore/include/fragmentstore/: command.h  default_app_types.h  default_types.h  fragmentstore.h
hexfile/: CMakeLists.txt  hexfile.hpp
hexsign/: CMakeLists.txt  base64.cpp  base64.hpp  hexfile.cpp  hexfile.hpp  hexsign.cpp  openSSH_key.cpp  openSSH_key.hpp
keyfile/: CMakeLists.txt  generate_keyfile.cpp  openSSH_key.cpp
niram/: CMakeLists.txt  no_init_ram.c
niram/include/niram/: no_init_ram.h
tests/: CMakeLists.txt
tests/cmake/: add_catch2_test_suite.cmake
tests/ed25519/: CMakeLists.txt  ed25519_tests.cpp
tests/example/: CMakeLists.txt  example_test.cpp
tests/example/include/: answer.h
tests/fragmentstore/: CMakeLists.txt  command_test.cpp  fragmentstore_test.cpp
tests/imitation_flash/: CMakeLists.txt  imitation_flash.c  imitation_flash_test.cpp
tests/imitation_flash/include/: imitation_flash.h
tests/updateserver/: CMakeLists.txt  transfer_test.cpp  updateserver_test.cpp
updateclient/: CMakeLists.txt  client.cpp  client.hpp  crc32.hpp  eraseclient.cpp  resetclient.cpp  rollbackclient.cpp  testserver.cpp  udpsocket.cpp  udpsocket.hpp  updateclient.cpp
updateserver/: CMakeLists.txt  server.c  transfer.c
updateserver/include/updateserver/: protocol.h  server.h  transfer.h
w25qxx/: CMakeLists.txt  interface_w25qxx.c
w25qxx/include/w25qxx/: flash_interface.h
