cmake_minimum_required(VERSION 3.14)
project(FwUpdateLibs)

set(FWUPDATELIBS_ROOT ${CMAKE_CURRENT_LIST_DIR})
add_subdirectory(ed25519)
add_subdirectory(fragmentstore)
add_subdirectory(updateserver)

if (NOT CMAKE_SYSTEM_PROCESSOR STREQUAL "arm")
add_subdirectory(hexsign)
set(BUILD_TESTS 1)
endif()

if (BUILD_TESTS)
    message(STATUS "Building unit tests for ${PROJECT_NAME}")
    enable_testing()
    add_subdirectory(tests)
else()
    message(STATUS "NOT building unit tests for ${PROJECT_NAME}")
endif()
